--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading"></h1>
+    <h1 class="heading">
         <img class="logo" src="assets/images/logo.png" alt="logo"> Love Maths
+    </h1>
     <div class="game-area">
         <div class="controls-area">
             <button data-type="addition" class="btn btn--big btn--green">
